--- a/windows/winupdates_v1.yaml
+++ b/windows/winupdates_v1.yaml
@@ -16,5 +16,6 @@
           - SecurityUpdates
           - CriticalUpdates
           - UpdateRollups
+          - DefinitionUpdates
         reboot: yes
         log_path: C:\beheer\Win_Template_Patch.log
