--- a/linux/update-apt-servers.yaml
+++ b/linux/update-apt-servers.yaml
@@ -1,8 +1,9 @@
 ---
 - hosts: all
-  sudo: true
+  become: yes
   tasks:
-   - name: updates a server
-     apt: update_cache=yes
-   - name: upgrade a server
-     apt: upgrade=dist
+  - name: Updata and upgrade
+    apt:
+      upgrade: yes
+      update_cache: yes
+      cache_valid_time: 86400
