--- a/linux/update-apt-servers-sudo.yaml
+++ b/linux/update-apt-servers-sudo.yaml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   become: yes
-  become_user: admin_updater
+  become_user: root
   tasks:
   - name: Updata and upgrade
     apt:
